Sourcecode/Output/Lamba + Oracle/cloudformation.yaml
AWSTemplateFormatVersion: "2010-09-09"
Transform: "AWS::Serverless-2016-10-31"
Description: 
Metadata:
  AlertIdentifier: "net-example-service"
  Tags:
    CostCenter: "finance"
Parameters:
  Region:
    Description: "Specify the region"
    Type: "String"
    Default: "eu-west-1"
    AllowedValues:
      - "eu-west-1"
  AppGroup:
    Type: String
    Default: "net-example-service"
    Description: ""
    AllowedPattern: "^[a-z0-9\-]{1,22}$"
  Environment:
    Type: String
    AllowedValues:
      - development
      - testing
      - acceptance
      - production
    Default: testing
    ConstraintDescription: Must be one of the values from the list.
    Description: Environment in which resources are deployed.
  OracleConnectionString:
    Type: "String"
    Default: "Data Source =(DESCRIPTION=(ADDRESS=(PROTOCOL=TCPS)(HOST={HostName})(PORT=2484))(CONNECT_DATA=(SERVICE_NAME=ORCL_A)));User Id={UserName};Password = {Password}"
    Description: "Oracle connection string. Contains {} placeholders for values to be substituted"
  OracleUserName:
    Type: "String"
    Default: "SRV_PENDINGPAYMENT"
  OraclePassword:
    Type: "String"
    NoEcho: true
  OracleHostName:
    Type: "String"
Mappings:
  Environment:
    testing:
      OracleCidr: "192.168.112.32/28"
    acceptance:
      OracleCidr: "192.168.112.32/28"
    production:
      OracleCidr: "192.168.67.16/28"

Conditions:
  NonDevelopmentResources: !Not [ !Equals [ !Ref Environment, "development" ] ]

Resources:
          
  ApiKey:
    Type: "AWS::ApiGateway::ApiKey"
    Properties:
      Enabled: false
      StageKeys:
        -
          RestApiId: !Ref "ServerlessApi"
          StageName: !Ref "ServerlessApiStage" # this resource is created by CloudFormation transform

  DomainName:
    Type: AWS::ApiGateway::DomainName
    Condition: NonDevelopmentResources
    Properties:
      CertificateArn: !GetAtt "CloudFrontCertificateArn.CertificateArn"
      DomainName: !Sub "${AppGroup}.${Region}.coolblue-${Environment}.eu"
  CloudFrontCertificateArn:
    Type: "Custom::GetCertificateArn"
    Condition: NonDevelopmentResources
    Properties:
      ServiceToken: !ImportValue "custom-resource-get-certificate"
      CertificateName: !Sub "${AppGroup}.${Region}.coolblue-${Environment}.eu"

  BasePathMapping:
    Type: "AWS::ApiGateway::BasePathMapping"
    Condition: NonDevelopmentResources
    Properties:
      DomainName: !Ref "DomainName"
      RestApiId: !Ref "ServerlessApi"
      Stage: !Ref "ServerlessApiStage"

  GimmeServiceFunction:
    Type: AWS::Serverless::Function
    Properties:
      # Make sure handler is 128 characters or less
      Handler: "Gimme.Host.Lambda::Gimme.Host.Lambda.Function::FunctionHandler"
      Runtime: dotnetcore3.1
      CodeUri: ./artifacts/Gimme.Host.Lambda.zip
      Description: 
      MemorySize: 512
      Timeout: 15
      FunctionName: !Sub "${AppGroup}-lambda"
      VpcConfig:
        SecurityGroupIds:
          - !ImportValue "oracle-vanessa-main-security-group"
          - !Ref "PrivateSecurityGroup"
        SubnetIds: !Split [",", !ImportValue "infrastructure-lambda-subnets"]
      Tags:
        Name: !Sub "${AWS::StackName}"
        AppGroup: !Sub "${AWS::StackName}"
        AppRole: "function"
        Environment: !Ref "Environment"
      Role: 
        !ImportValue "iam-lambda-basic-execution-role-arn"
      Environment:
        Variables:
          Environment: !Ref Environment
          OracleConnectionString: !Ref OracleConnectionString
          OracleUserName: !Ref OracleUserName
          OraclePassword: !Ref OraclePassword
          OracleHostName: !Ref OracleHostName
      Events:
        GetApi:
          Type: "Api"
          Properties:
            Method: "POST"
            Path: "/gimme"
            RestApiId: !Ref "ServerlessApi"  
  PrivateSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Allowed incoming/outgoing traffic to/from the internal resources"
      SecurityGroupEgress:
        - CidrIp: !FindInMap ["Environment", !Ref "Environment", "OracleCidr"]
          FromPort: 1521
          ToPort: 1521
          IpProtocol: "tcp"
        - CidrIp: "0.0.0.0/0"
          FromPort: 443
          ToPort: 443
          IpProtocol: "tcp"
      VpcId: !ImportValue "infrastructure-vpc"
      Tags:
        - Key: "Name"
          Value: !Sub "${AWS::StackName}-private"
        - Key: "AppRole"
          Value: "security-group"
        - Key: "Environment"
          Value: !Ref "Environment"
        - Key: "AppGroup"
          Value: !Ref "AppGroup"            
  PrivateSecurityGroupIngress:
    Type: "AWS::EC2::SecurityGroupIngress"
    Properties:
      Description: "Security Group Ingress for pin terminal payment Lambda"
      GroupId: !Ref "PrivateSecurityGroup"
      IpProtocol: "tcp"
      FromPort: 2484
      ToPort: 2484
      SourceSecurityGroupId: !Ref "PrivateSecurityGroup"
  PrivateSecurityGroupEgress:
    Type: "AWS::EC2::SecurityGroupEgress"
    Properties:
      Description: "Security Group Egress for pin terminal payment Lambda"
      GroupId: !Ref "PrivateSecurityGroup"
      IpProtocol: "tcp"
      FromPort: 2484
      ToPort: 2484
      DestinationSecurityGroupId: !Ref "PrivateSecurityGroup"
  ServerlessApi:  
    Type: "AWS::Serverless::Api"
    Name: "gimme-service-api"    
    Properties:
      StageName: !Ref "Environment"
      DefinitionBody:
        swagger: "2.0"
        info:
          title: !Ref "AWS::StackName"
          version: "2018-01-11-11:40"
        basePath: !Sub "/${Environment}"
        schemes:
          - "https"
        paths:
          /gimme:
            post:
              consumes:
              - "application/json"
              produces:
              - "application/json"
              parameters:
              - in: "body"
                name: "gimme"
              responses:
                '200':
                  description: "200 response"
              x-amazon-apigateway-integration:
                type: "aws_proxy"
                uri: !Sub "arn:aws:apigateway:${Region}:lambda:path/2015-03-31/functions/${GimmeServiceFunction.Arn}/invocations"
                httpMethod: POST
                responses:
                  "default":
                    statusCode: "200"
  ServerlessApiRoute53RecordSet:
    Type: "AWS::Route53::RecordSet"
    Condition: NonDevelopmentResources
    Properties:
      AliasTarget:
        DNSName: !GetAtt "DomainName.DistributionDomainName"
        HostedZoneId: "Z2FDTNDATAQYW2"
      HostedZoneId: !ImportValue "dns-coolblue-public-hosted-zone-id"
      Name: !Sub "${AppGroup}.${Region}.coolblue-${Environment}.eu"
      Type: "A"
